CICO-8633 - graph dim and spatial properties initialization and throttled resizing func, scrollbar styles, remove title, correct intial sizing

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -116,9 +116,17 @@
   display: block;
   position: relative;
   overflow: hidden;
-  top: 60px;
+  top: 0px;
   left: 265px; 
   z-index: 100;
+
+   .iScrollIndicator{
+      background: linear-gradient(-90deg, #ff860d 0%, #ffb319 100%) !important;
+    }
+
+    .iScrollHorizontalScrollbar {
+      bottom: auto !important;
+    }
 }
 
 .topbar {
